# LLM-Playground

./: .env.example  .gitignore  .pre-commit-config.yaml  PRE_COMMIT_SETUP.md  README.md  pnpm-lock.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py
backend/app/hooks/: base.py  examples.py  manager.py
backend/app/models/: __init__.py  schemas.py
backend/app/providers/: __init__.py  base.py  huggingface.py  openrouter.py  registry.py
backend/app/routers/: __init__.py  chat.py  hooks.py  huggingface.py  models.py  providers.py
backend/app/services/: chat.py  hf_downloads.py
backend/llm_playground_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_providers.py
docs/: issue-tracker.md
frontend/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ARCHITECTURE.md  ChatHeader.tsx  ChatInterface.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  hooks.ts  types.ts  utils.ts
frontend/src/components/layout/: ARCHITECTURE.md  DeveloperPanel.tsx  DeveloperPanelView.tsx  NavigationSettingsModal.tsx  NavigationSidebar.tsx  NavigationSidebarView.tsx  hooks.ts  types.ts  utils.ts
frontend/src/components/model-selector/: ARCHITECTURE.md  ModelDetailsCard.tsx  ModelDropdown.tsx  ModelFilterToggle.tsx  ModelListItem.tsx  README.md  (+7 more)
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: chat-store.ts  model-store.ts
(+15 files in other folders)
