[project]
name = "llm-playground-backend"
version = "0.1.0"
description = "FastAPI backend for the LLM Playground"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.26.0",
  "pydantic>=1.10.0",
  "python-dotenv>=1.0.0",
  "transformers>=4.36.0",
  "huggingface-hub>=0.20.2",
  "torch>=2.1.0; platform_system != 'Darwin' or platform_machine == 'arm64'",
  "pydantic-settings>=2.1.0",
]

[tool.uv]
package = true

dev-dependencies = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
